[package]
name = "rbx-reclaimer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
serde = { version = "1.0.183", features = ["derive"] }
colored = "2.0.4"
serde_json = "1.0.104"
terminal-link = "0.1.0"
async-recursion = "1.0.4"
env_logger = "0.10.0"
